--- a/kb_frontend/public/index.html
+++ b/kb_frontend/public/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Kitab Bazaar</title>
-  <link rel="icon" type="image/x-icon" href="KitabBazaar.jpg">
+  <link rel="icon" type="image/x-icon" href="KitabBazaar.jpg" />
+
+  <meta name="description" content="Explore and buy books online from Kitab Bazaar." />
+
+  <!-- Open Graph tags -->
+  <meta property="og:title" content="Kitab Bazaar - Online Book Store" />
+  <meta property="og:description" content="Explore and buy books online from Kitab Bazaar." />
+  <meta property="og:image" content="https://res.cloudinary.com/djg8ev8h2/image/upload/v1746886639/KitabBazaar_umisd2.jpg" />
+  <meta property="og:url" content="https://e-commerce-kitab-bazaar.vercel.app/" />
+  <meta property="og:type" content="website" />
+
 </head>
 <body>
 
